fix slidebutton not visible on mobile

--- a/src/components/layout/SlideButton.css
+++ b/src/components/layout/SlideButton.css
@@ -13,7 +13,7 @@
     font-weight: bold;
     transition: 0.5s;
     position: absolute;
-    bottom: 1%;
+    bottom: 8%;
 
 }
 .slideButton-button:hover{
